adds weak watching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "jsx": "preserve",
     "jsxFactory": "createElement",
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@jsx/*": [
